--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
 
     .hero {
       text-align: center;
-      animation: fadeIn 1.2s ease-out;
     }
-    .hero img { height: 180px; margin-bottom: 50px; animation: float 6s ease-in-out infinite; }
+    .hero img { height: 180px; margin-bottom: 50px; }
     .hero h1 { font-size: 72px; font-weight: 800; margin-bottom: 24px; }
     .hero p { font-size: 22px; max-width: 800px; margin: 0 auto 48px; opacity: 0.9; }
     .btn {
