--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Waterpolistas</title>
+  <title>Waterpolistas | Website</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -142,23 +142,23 @@
   <div>
     <a href="#info">Information</a>
     <a href="#how">How to Play</a>
-    <a href="#about">Who Are We</a>
+    <a href="#about">Who Are We?</a>
   </div>
 </nav>
 
 <section class="hero visible">
   <img src="logo.png" alt="Waterpolistas Logo" />
-  <h1>Rule the Pool</h1>
-  <p>A next-generation water polo game blending realism, arcade speed, and competitive multiplayer.</p>
+  <h1>🟡 Waterpolistas 🟡</h1>
+  <p>A next-generation water polo game blending realism, arcade speed, and competitive game</p>
   <button class="btn">Dive In</button>
 </section>
 
 <section id="info">
   <h2>Game Information</h2>
   <div class="grid">
-    <div class="card"><h3>Gameplay</h3><p>Fluid swimming, realistic ball physics, and intense goal action inspired by real water polo.</p></div>
-    <div class="card"><h3>Multiplayer</h3><p>Online ranked matches, private games with friends, and global tournaments.</p></div>
-    <div class="card"><h3>Modes</h3><p>Quick Match, Career Mode, Tournament Mode, and Practice Pool.</p></div>
+    <div class="card"><h3>Gameplay</h3><p>A 2D game with some very unique features, soon enough we will release a 3D version of it.</p></div>
+    <div class="card"><h3>Season</h3><p>Season matches, play with AI-teams and be the #1 on the table!</p></div>
+    <div class="card"><h3>Modes</h3><p>Match with bots, Free play and Season matches.</p></div>
   </div>
 </section>
 
@@ -175,11 +175,11 @@
 <section id="about">
   <h2>Who Are We</h2>
   <div style="max-width:900px;margin:auto;font-size:22px;text-align:center;opacity:0.9;">
-    We are passionate developers and water polo fans creating the ultimate digital water polo experience.
+    Hello, my name is David and I am a waterpolo fan and I made this game because i want a game for all the waterpolo fans out there to have a game with their sport to play.
   </div>
 </section>
 
-<footer>© 2026 Waterpolistas. All rights reserved.</footer>
+<footer>© 2026 Waterpolistas. All rights reserved. Not associated with any Waterpolo team.</footer>
 
 <!-- Ripple Effect -->
 <script>
