--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       color: white;
       overflow-x: hidden;
     }
+
+    /* NAVIGATION */
     nav {
       position: sticky;
       top: 0;
@@ -33,25 +35,88 @@
       font-size: 22px;
       font-weight: 800;
     }
-    nav img { height: 64px; transition: transform 0.4s ease, filter 0.4s ease; }
-    nav img:hover { transform: scale(1.15) rotate(-2deg); filter: drop-shadow(0 10px 20px rgba(34,211,238,0.6)); }
+    nav img { 
+      height: 64px; 
+      transition: transform 0.4s ease, filter 0.4s ease; 
+    }
+    nav img:hover { 
+      transform: scale(1.15) rotate(-2deg); 
+      filter: drop-shadow(0 10px 20px rgba(34,211,238,0.6)); 
+    }
     nav a {
       margin-left: 32px;
       text-decoration: none;
       color: white;
       font-weight: 600;
+      position: relative;
       transition: color 0.3s;
     }
-    nav a:hover { color: #22d3ee; }
+    /* Animated underline */
+    nav a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -4px;
+      width: 0%;
+      height: 2px;
+      background: #22d3ee;
+      transition: width 0.3s ease;
+    }
+    nav a:hover {
+      color: #22d3ee;
+    }
+    nav a:hover::after {
+      width: 100%;
+    }
 
-    section { padding: 140px 40px; }
+    /* SECTIONS */
+    section { 
+      padding: 140px 40px;
+      opacity: 0;
+      transform: translateY(40px);
+      animation: sectionReveal 1s ease forwards;
+    }
+    section:nth-of-type(1) { animation-delay: 0.2s; }
+    section:nth-of-type(2) { animation-delay: 0.4s; }
+    section:nth-of-type(3) { animation-delay: 0.6s; }
+    section:nth-of-type(4) { animation-delay: 0.8s; }
 
+    @keyframes sectionReveal {
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* HERO */
     .hero {
       text-align: center;
     }
-    .hero img { height: 180px; margin-bottom: 50px; }
+    .hero img { 
+      height: 180px; 
+      margin-bottom: 50px; 
+      animation: float 4s ease-in-out infinite;
+    }
+    @keyframes float {
+      0% { transform: translateY(0px); }
+      50% { transform: translateY(-18px); }
+      100% { transform: translateY(0px); }
+    }
+
+    /* GRADIENT HEADINGS */
+    h1, h2, h3 {
+      background: linear-gradient(90deg, #22d3ee, #0ea5e9);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    /* SUBTLE GLOW ON IMPORTANT WORDS */
+    .glow {
+      color: #22d3ee;
+      text-shadow: 0 0 8px rgba(34,211,238,0.6), 0 0 16px rgba(34,211,238,0.3);
+    }
+
     .hero h1 { font-size: 72px; font-weight: 800; margin-bottom: 24px; }
     .hero p { font-size: 22px; max-width: 800px; margin: 0 auto 48px; opacity: 0.9; }
+
+    /* BUTTONS */
     .btn {
       padding: 18px 44px;
       font-size: 20px;
@@ -68,6 +133,7 @@
       box-shadow: 0 20px 40px rgba(34,211,238,0.35);
     }
 
+    /* CARDS */
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -88,6 +154,7 @@
     h3 { font-size: 26px; margin-bottom: 16px; }
     p { line-height: 1.7; }
 
+    /* FOOTER */
     footer {
       padding: 40px;
       text-align: center;
@@ -96,43 +163,30 @@
       opacity: 0.75;
     }
 
+    /* ANIMATIONS */
     @keyframes fadeIn {
       from { opacity: 0; transform: scale(0.9); }
       to { opacity: 1; transform: scale(1); }
     }
 
-    @keyframes float {
-      0% { transform: translateY(0px); }
-      50% { transform: translateY(-18px); }
-      100% { transform: translateY(0px); }
+    /* RIPPLE EFFECT */
+    .ripple {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background: rgba(34,211,238,0.4);
+      border-radius: 50%;
+      pointer-events: none;
+      transform: translate(-50%, -50%);
+      animation: rippleAnim 0.5s linear;
     }
-
-    section {
-      opacity: 0;
-      transform: translateY(40px);
-      animation: sectionReveal 1s ease forwards;
-    }
-
-    section:nth-of-type(1) { animation-delay: 0.2s; }
-    section:nth-of-type(2) { animation-delay: 0.4s; }
-    section:nth-of-type(3) { animation-delay: 0.6s; }
-    section:nth-of-type(4) { animation-delay: 0.8s; }
-
-    @keyframes sectionReveal {
-      to { opacity: 1; transform: translateY(0); }
-    }
-      to { opacity: 1; transform: scale(1); }
+    @keyframes rippleAnim {
+      0% { transform: translate(-50%, -50%) scale(0.5); opacity: 1; }
+      100% { transform: translate(-50%, -50%) scale(3); opacity: 0; }
     }
   </style>
 </head>
 <body>
-
-<!-- Wave Background -->
-<div class="waves">
-  <div class="wave"></div>
-  <div class="wave"></div>
-  <div class="wave"></div>
-</div>
 
 <nav>
   <div class="brand">
@@ -148,17 +202,17 @@
 
 <section class="hero visible">
   <img src="logo.png" alt="Waterpolistas Logo" />
-  <h1>🟡 Waterpolistas 🟡</h1>
-  <p>A next-generation water polo game blending realism, arcade speed, and competitive game</p>
+  <h1>🟡 <span class="glow">Waterpolistas</span> 🟡</h1>
+  <p>A next-generation water polo game blending realism, arcade speed, and competitive gameplay</p>
   <button class="btn">Dive In</button>
 </section>
 
 <section id="info">
   <h2>Game Information</h2>
   <div class="grid">
-    <div class="card"><h3>Gameplay</h3><p>A 2D game with some very unique features, soon enough we will release a 3D version of it.</p></div>
-    <div class="card"><h3>Season</h3><p>Season matches, play with AI-teams and be the #1 on the table!</p></div>
-    <div class="card"><h3>Modes</h3><p>Match with bots, Free play and Season matches.</p></div>
+    <div class="card"><h3>Gameplay</h3><p>A 2D game with unique features; soon a 3D version will be released.</p></div>
+    <div class="card"><h3>Season</h3><p>Season matches, play with AI teams, and be #1 on the table!</p></div>
+    <div class="card"><h3>Modes</h3><p>Match with bots, free play, and season matches.</p></div>
   </div>
 </section>
 
@@ -175,14 +229,14 @@
 <section id="about">
   <h2>Who Are We</h2>
   <div style="max-width:900px;margin:auto;font-size:22px;text-align:center;opacity:0.9;">
-    Hello, my name is David and I am a waterpolo fan and I made this game because i want a game for all the waterpolo fans out there to have a game with their sport to play.
+    Hello, my name is David and I am a water polo fan. I made this game so all water polo fans can enjoy a game about their sport.
   </div>
 </section>
 
 <footer>© 2026 Waterpolistas. All rights reserved. Not associated with any Waterpolo team.</footer>
 
-<!-- Ripple Effect -->
 <script>
+  // Ripple Effect
   document.addEventListener("mousemove", e => {
     const ripple = document.createElement("span");
     ripple.className = "ripple";
@@ -192,6 +246,7 @@
     setTimeout(() => ripple.remove(), 500);
   });
 
+  // Intersection Observer for section reveal
   const observer = new IntersectionObserver(entries => {
     entries.forEach(entry => {
       if (entry.isIntersecting) entry.target.classList.add("visible");
