--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DynastyMC - Minecraft Server</title>
+  <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
@@ -179,7 +180,10 @@
 <body>
   <header>
     <div class="container nav">
-      <div class="logo">DynastyMC</div>
+      <div style="display:flex; align-items:center; gap:10px;">
+        <img src="logo.png" alt="DynastyMC Logo" style="width:36px; height:36px;">
+        <div class="logo">DynastyMC</div>
+      </div>
       <nav class="nav-links">
         <a href="#join">Join</a>
         <a href="#features">Features</a>
