--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
   <footer>
     <div class="container">
-      <p>© 2026 DynastyMC | Minecraft Server Website</p>
+      <p>© 2026 DynastyMC | All rights reserved</p>
     </div>
   </footer>
   <script>
